fix/ArrowParamsForm -- aside elem unnecessary horizontal scroll removed

--- a/src/components/article-params-form/ArticleParamsForm.module.scss
+++ b/src/components/article-params-form/ArticleParamsForm.module.scss
@@ -3,7 +3,8 @@
 	left: 0;
 	width: 616px;
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
+	overflow-x: clip;
 	transform: translate(-616px);
 	transition: transform 0.5s ease;
 }
